--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,32 +1,25 @@
 {
 	"name": "frontend",
-	"private": true,
 	"type": "module",
+	"private": true,
 	"scripts": {
-		"build": "react-router build",
-		"dev": "react-router dev",
-		"start": "react-router-serve ./build/server/index.js",
-		"typecheck": "react-router typegen && tsc"
-	},
-	"dependencies": {
-		"@react-router/node": "^7.4.0",
-		"@react-router/serve": "^7.4.0",
-		"@tanstack/react-query": "^5.69.0",
-		"isbot": "^5.1.17",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0",
-		"react-router": "^7.4.0"
+		"dev": "vinxi dev",
+		"build": "vinxi build",
+		"start": "vinxi start"
 	},
 	"devDependencies": {
-		"@react-router/dev": "^7.4.0",
-		"@tailwindcss/vite": "^4.0.0",
-		"@types/node": "^20",
-		"@types/react": "^19.0.1",
-		"@types/react-dom": "^19.0.1",
-		"react-router-devtools": "^1.1.0",
-		"tailwindcss": "^4.0.0",
-		"typescript": "^5.7.2",
-		"vite": "^5.4.11",
-		"vite-tsconfig-paths": "^5.1.4"
+		"@types/bun": "latest",
+		"@types/react": "^19.0.12",
+		"@types/react-dom": "^19.0.4"
+	},
+	"peerDependencies": {
+		"typescript": "^5.8.2"
+	},
+	"dependencies": {
+		"@tanstack/react-router": "^1.114.27",
+		"@tanstack/react-start": "^1.114.27",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"vinxi": "^0.5.3"
 	}
 }
