--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,10 +16,19 @@
 		"typescript": "^5.8.2"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.2",
+		"@tailwindcss/postcss": "^4.0.15",
 		"@tanstack/react-router": "^1.114.27",
 		"@tanstack/react-start": "^1.114.27",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.483.0",
+		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"tailwind-merge": "^3.0.2",
+		"tailwindcss": "^4.0.15",
+		"tw-animate-css": "^1.2.4",
 		"vinxi": "^0.5.3"
 	}
 }
