--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,7 +18,11 @@
 	"dependencies": {
 		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/postcss": "^4.0.15",
+		"@tanstack/react-query": "^5.69.0",
+		"@tanstack/react-query-devtools": "^5.69.0",
 		"@tanstack/react-router": "^1.114.27",
+		"@tanstack/react-router-devtools": "^1.114.27",
+		"@tanstack/react-router-with-query": "^1.114.27",
 		"@tanstack/react-start": "^1.114.27",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
