--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,6 +16,7 @@
 		"typescript": "^5.8.2"
 	},
 	"dependencies": {
+		"@mapbox/search-js-core": "^1.0.0",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/postcss": "^4.0.15",
 		"@tanstack/react-query": "^5.69.0",
