--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -34,6 +34,7 @@
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss": "^4.0.15",
 		"tw-animate-css": "^1.2.4",
-		"vinxi": "^0.5.3"
+		"vinxi": "^0.5.3",
+		"zod": "^3.24.2"
 	}
 }
