--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,7 +10,8 @@
 	"devDependencies": {
 		"@types/bun": "latest",
 		"@types/react": "^19.0.12",
-		"@types/react-dom": "^19.0.4"
+		"@types/react-dom": "^19.0.4",
+		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"peerDependencies": {
 		"typescript": "^5.8.2"
