--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,7 +5,8 @@
 	"scripts": {
 		"dev": "vinxi dev",
 		"build": "vinxi build",
-		"start": "vinxi start"
+		"start": "vinxi start",
+		"chii": "chii start -p 8080"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
@@ -13,6 +14,7 @@
 		"@types/react": "^19.0.12",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-basic-ssl": "^2.0.0",
+		"chii": "^1.15.4",
 		"vite-tsconfig-paths": "^5.1.4"
 	},
 	"peerDependencies": {
