--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,9 +3,13 @@
 	"module": "src/index.ts",
 	"type": "module",
 	"devDependencies": {
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"drizzle-kit": "^0.30.5"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
+	},
+	"dependencies": {
+		"drizzle-orm": "^0.41.0"
 	}
 }
