--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "frontend",
+	"name": "@pinpoint/frontend",
 	"type": "module",
 	"private": true,
 	"scripts": {
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@mapbox/search-js-core": "^1.0.0",
+		"@pinpoint/db": "workspace:*",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/postcss": "^4.0.15",
 		"@tanstack/react-query": "^5.69.0",
@@ -30,6 +31,7 @@
 		"@tanstack/react-router-devtools": "^1.114.27",
 		"@tanstack/react-router-with-query": "^1.114.27",
 		"@tanstack/react-start": "^1.114.27",
+		"better-auth": "^1.2.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"leaflet": "^1.9.4",
