scripts for better auth and dev

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"private": true,
 	"scripts": {
+		"dev": "bun run -F @pinpoint/frontend dev",
 		"lint": "biome check .",
 		"format": "biome check . --write"
 	},
