--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres:16-alpine
     environment:
-      POSTGRES_DB: electric
+      POSTGRES_DB: pinpoint
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
     ports:
@@ -17,15 +17,3 @@ services:
       - listen_addresses=*
       - -c
       - wal_level=logical
-
-  electric:
-    image: electricsql/electric
-    environment:
-      DATABASE_URL: postgresql://postgres:password@postgres:5432/electric?sslmode=disable
-      # Not suitable for production. Only use insecure mode in development or if you've otherwise secured the Electric API.
-      # See https://electric-sql.com/docs/guides/security
-      ELECTRIC_INSECURE: true
-    ports:
-      - "3000:3000"
-    depends_on:
-      - postgres
