--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -23,6 +23,7 @@
 	"dependencies": {
 		"@mapbox/search-js-core": "^1.0.0",
 		"@pinpoint/db": "workspace:*",
+		"@radix-ui/react-checkbox": "^1.1.4",
 		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/postcss": "^4.0.15",
