--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "frontend",
+	"name": "@pinpoint/frontend",
 	"type": "module",
 	"private": true,
 	"scripts": {
@@ -22,6 +22,9 @@
 	},
 	"dependencies": {
 		"@mapbox/search-js-core": "^1.0.0",
+		"@pinpoint/db": "workspace:*",
+		"@radix-ui/react-checkbox": "^1.1.4",
+		"@radix-ui/react-label": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.2",
 		"@tailwindcss/postcss": "^4.0.15",
 		"@tanstack/react-query": "^5.69.0",
@@ -30,14 +33,17 @@
 		"@tanstack/react-router-devtools": "^1.114.27",
 		"@tanstack/react-router-with-query": "^1.114.27",
 		"@tanstack/react-start": "^1.114.27",
+		"better-auth": "^1.2.5",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"leaflet": "^1.9.4",
 		"lucide-react": "^0.483.0",
+		"next-themes": "^0.4.6",
 		"postcss": "^8.5.3",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-leaflet": "^5.0.0",
+		"sonner": "^2.0.2",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss": "^4.0.15",
 		"tw-animate-css": "^1.2.4",
