--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,15 +1,25 @@
 {
-	"name": "db",
+	"name": "@pinpoint/db",
 	"module": "src/index.ts",
 	"type": "module",
+	"exports": {
+		".": "./src/index.ts"
+	},
+	"scripts": {
+		"better-auth:schema": "bunx @better-auth/cli generate --config ../../apps/frontend/app/lib/auth.ts",
+		"db:push": "drizzle-kit push"
+	},
 	"devDependencies": {
 		"@types/bun": "latest",
+		"@types/pg": "^8.11.11",
 		"drizzle-kit": "^0.30.5"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
 	},
 	"dependencies": {
-		"drizzle-orm": "^0.41.0"
+		"drizzle-orm": "^0.41.0",
+		"pg": "^8.14.1",
+		"uuid": "^11.1.0"
 	}
 }
